<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundScape</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_lobby">GameLobbyActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="opening_button_user_new">New user</string>
    <string name="opening_dialog_user_existing">Existing User:</string>
    <string name="opening_dialog_user_email">example@domain.com</string>
    <string name="opening_dialog_user_password">Your password</string>
    <string name="opening_dialog_login">Login</string>
    <string name="opening_dialog_cancel">Cancel</string>
    <string name="registration_name">Full name:</string>
    <string name="registration_name_hint">John Doe</string>
    <string name="registration_email">Email:</string>
    <string name="registration_email_hint">example@domain.com</string>
    <string name="registration_password">Password:</string>
    <string name="registration_password_hint">Your password.</string>
    <string name="registration_repassword">Re-enter Password:</string>
    <string name="registration_repassword_hint">Your password.</string>
    <string name="registration_button_register">Register</string>
    <string name="registration_button_existing_user">Existing user?</string>
    <string name="registration_message_auth_fail">Username or Password are not valid.</string>
    <string name="login_email">Email:</string>
    <string name="login_email_hint">example@domain.com</string>
    <string name="login_password">Password:</string>
    <string name="login_password_hint">Your password.</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Not registered?</string>
    <string name="login_message_auth_fail">Username or Password are not valid.</string>
    <string name="lobby_text_view_title">My Games</string>
    <string name="lobby_button_create_game">Create game</string>
    <string name="game_button_audio_text">TAP TO HEAR</string>
    <string name="game_button_give_up">give up</string>
    <string name="newgame_text_view_title">Create game</string>
    <string name="newgame_text_view_question">How do you want to find your opponent?</string>
    <string name="newgame_button_email">Email</string>
    <string name="newgame_button_random">Random</string>
    <string name="finduser_text_view_description">Enter your opponent\'s e-mail address</string>
    <string name="finduser_button_submit">go</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_sound_recording">SoundRecordingActivity</string>
    <string name="title_activity_word_selection">WordSelectionActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_find_user_to_play">FindUserToPlayActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="match_text_view_title">Match</string>
    <string name="match_text_view_vs">VS.</string>
    <string name="match_text_view_turn">Turn</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recording_text_view_title">You are now recording</string>
    <string name="recording_alert_title">Send recording?</string>
    <string name="recording_alert_save">send</string>
    <string name="recording_alert_cancel">cancel</string>
    <string name="tag_sound_text">Enter sound name:</string>
    <string name="enter_difficuly_string">Select difficulty</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sound_taggin">SoundTagginActivity</string>
    <string name="tag_sound_string">What did you just record?</string>
    <string name="tag_emotion_string">How did that make you feel?</string>
    <string name="save_and_send_string">Send</string>
    <string name="unpleasant_label">Unpleasant</string>
    <string name="pleasant_label">Pleasant</string>
    <string name="press_to_record_string">Press to Record:</string>
    <string name="title_activity_guess_word">GuessWordActivity</string>
    <string name="title_activity_guess_success">GuessSuccessActivity</string>
    <string name="guess_correct_label_string">You got it right!</string>
    <string name="guess_success_mapping_thanks_string">You\'ve helped us map out Tel Aviv\'s sound map and</string>
    <string name="you_receive_string">YOU RECEIVE</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="time_up_string">No more guesses left!</string>
    <string name="answer_was_string">The correct answer was:</string>
    <string name="better_luck_string">Better luck next time...</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="title_activity_login_or_register">LoginOrRegisterActivity</string>

</resources>