<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" >

   
    <TextView
        android:id="@+id/registration_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/registration_text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_text_view_title"
        android:layout_marginTop="30dp"
        android:text="@string/registration_name"
        android:textSize="15sp" />
   
    <EditText
        android:id="@+id/registration_edit_text_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_below="@+id/registration_text_view_name"
		android:layout_alignLeft="@+id/registration_text_view_name"
        android:ems="10"
        android:hint="@string/registration_name_hint"
        android:inputType="textEmailAddress" >
        
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/registration_text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_edit_text_name"
        android:layout_alignLeft="@+id/registration_text_view_name"
        android:layout_marginTop="10dp"
        android:text="@string/registration_email"
        android:textSize="15sp" />
   
    <EditText
        android:id="@+id/registration_edit_text_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_below="@+id/registration_text_view_email"
		android:layout_alignLeft="@+id/registration_text_view_name"
        android:ems="10"
        android:hint="@string/registration_email_hint"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:id="@+id/registration_text_view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/registration_edit_text_email"
        android:layout_alignLeft="@+id/registration_text_view_name"
        android:text="@string/registration_password"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/registration_edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_text_view_password"
        android:layout_alignLeft="@+id/registration_text_view_name"
        android:hint="@string/registration_password_hint"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/registration_text_view_repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/registration_edit_text_password"
        android:layout_alignLeft="@+id/registration_text_view_name"
        android:text="@string/registration_repassword"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/registration_edit_text_repassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_text_view_repassword"
        android:layout_alignLeft="@+id/registration_text_view_name"
        android:hint="@string/registration_repassword_hint"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/registration_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_edit_text_repassword"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/registration_button_existing_user" />
    
    
    <Button
        android:id="@+id/registration_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_edit_text_repassword"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/registration_button_register" />
    
    <TextView
        android:id="@+id/registration_text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/registration_button_register"
        android:layout_marginTop="5dp"
        android:text=""
        android:textSize="15sp" />

</RelativeLayout>