<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/newgame_text_view_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/newgame_text_view_title"
        android:textSize="30sp" />
    
	<View
	    android:id="@+id/line_seperator"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:background="@android:color/black"
    	android:layout_marginTop="2dp" />
	
    <TextView 
        android:id="@+id/newgame_text_view_question"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/newgame_text_view_question"
        android:textSize="20sp" />
    
    <Button 
        android:id="@+id/newgame_button_email"
        style="@style/gamelobby_button_game"
        android:text="@string/newgame_button_email" />
    
    <Button 
        android:id="@+id/newgame_button_random"
        style="@style/gamelobby_button_game"
        android:text="@string/newgame_button_random" />

</LinearLayout>