<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_dialog"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:contentDescription="@string/opening_dialog_user_existing" />
    <EditText
        android:id="@+id/login_dialog_username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/login_email_hint" />
    <EditText
        android:id="@+id/login_dialog_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/login_password_hint"/>
</LinearLayout>