<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoundTagginActivity" >

    <include
        android:id="@+id/include1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/game_header" />

    <Button
        android:id="@+id/send_sound_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/save_and_send_string" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sound_tag_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/tag_emotion_string"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/sound_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/tag_sound_string"
        android:textSize="25sp" />

    <SeekBar
        android:id="@+id/emotion_value_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sound_name_textView"
        android:layout_alignRight="@+id/sound_name_textView"
        android:layout_below="@+id/textView2"
        android:max="100" />

    <EditText
        android:id="@+id/sound_tag_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sound_name_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emotion_value_seekBar"
        android:text="@string/unpleasant_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/emotion_value_seekBar"
        android:text="@string/pleasant_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>